# pytropicsquare

./: pyproject.toml
tests/unit/: test_transports.py  test_tropicsquare.py
tropicsquare/: __init__.py
tropicsquare/ports/micropython/: aesgcm.py  x25519.py
tropicsquare/transports/: __init__.py  uart.py
