[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytropicsquare"
dynamic = ["version"]
description = "Library for Tropic Square TROPIC01 secure element"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cryptography",
  "pyserial",
]
license = { text = "MIT" }
authors = [
  { name = "Petr Kracik", email = "petrkr@petrkr.net" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
]

[project.optional-dependencies]
test = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pytest-mock>=3.11.1",
  "pytest-html>=4.1.0",
]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pytest-mock>=3.11.1",
  "pytest-html>=4.1.0",
  "flake8>=6.1.0",
  "black>=23.7.0",
  "mypy>=1.5.0",
  "coverage[toml]>=7.3.0",
]

[project.urls]
Homepage = "https://github.com/petrkr/pytropicsquare"

[tool.setuptools.dynamic]
version = { attr = "tropicsquare.__version__" }

[tool.setuptools.packages.find]
include = ["tropicsquare*"]
